--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^3.3.13"
     },
     "dependencies": {
-        "@heroicons/vue": "^2.2.0"
+        "@heroicons/vue": "^2.2.0",
+        "emoji-mart": "^5.6.0"
     }
 }
