--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.2.0",
-        "emoji-mart": "^5.6.0"
+        "emoji-mart": "^5.6.0",
+        "highlight.js": "^11.11.1",
+        "markdown-it": "^14.1.0"
     }
 }
